Bug 2258 - xset should not complain about "Xlib: extension "XFree86-Misc" missing on display ":35.0"."
Summary: xset should not complain about "Xlib: extension "XFree86-Misc" missing on di...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xset (show other bugs)
Version: git
Hardware: All All
: high normal
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-01-10 17:52 UTC by Roland Mainz
Modified: 2005-03-19 17:48 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch for 2005-03-20-trunk (4.23 KB, patch)
2005-03-20 12:42 UTC, Roland Mainz
roland.mainz: 6.8-branch?
Details | Splinter Review

Description Roland Mainz 2005-01-10 17:52:08 UTC
xset should not complain about 'Xlib:  extension "XFree86-Misc" missing on
display ":35.0".' when doing a query (e.g. % xset q #) - this should be caught
before any "XFree86-Misc"-specific extension functions are being used (e.g. test
for "XFree86-Misc" and skip the matching functionality if not available).
Comment 1 Roland Mainz 2005-03-20 12:34:24 UTC
Taking bug myself...
Comment 2 Roland Mainz 2005-03-20 12:42:50 UTC
Created attachment 2166 [details] [review]
Patch for 2005-03-20-trunk
Comment 3 Roland Mainz 2005-03-20 12:46:47 UTC
Patch checked-in...

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.825; previous revision: 1.824
/cvs/xorg/xc/programs/xset/xset.c,v  <--  xc/programs/xset/xset.c
new revision: 1.7; previous revision: 1.6
Mailing the commit message to xorg-commit@lists.freedesktop.org...

... marking bug as FIXED.
Comment 4 Roland Mainz 2005-03-20 12:48:29 UTC
Comment on attachment 2166 [details] [review]
Patch for 2005-03-20-trunk

Requsting approval for X11R6.8.x stable branch, the fix is just a small check
whether the matching extension is available or not.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.