//bugs.freedesktop.org/show_bug.cgi?id=2258) attachment #2166     (https://bugs.freedesktop.org/attachment.cgi?id=2166) "xset q" (query)     should not print an error message ('Xlib: extension "XFree86-Misc"     missing on display ":35.0".') when the "XFree86-Misc" is not available     on the Xserver.