xset.c
@@ -1242,6 +1242,7 @@ int scr = DefaultScreen (dpy);
 XKeyboardState values;
 int acc_num, acc_denom, threshold;
 int timeout, interval, prefer_blank, allow_exp;
+int dummy;
 #ifdef XF86MISC
 XF86MiscKbdSettings kbdinfo;
 #endif
@@ -1275,7 +1276,8 @@ else
 #endif
 #endif
 #ifdef XF86MISC
-if (XF86MiscGetKbdSettings(dpy, &kbdinfo))
+if (XF86MiscQueryExtension(dpy, &dummy, &dummy) &&
+    XF86MiscGetKbdSettings(dpy, &kbdinfo))
   printf ("  auto repeat delay:  %d    repeat rate:  %d\n",
           kbdinfo.delay, kbdinfo.rate);
 #endif
